--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -13,6 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Dataset Drive link : add this in colab : https://drive.google.com/drive/u/1/folders/1r4xj4Jq7gQh6g2VHnFWEWy1BMjWApcuH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Model Training : https://colab.research.google.com/drive/1byy0IqQ1UpBbks2mFy3XwITrNhiM49uR?usp=sharing"
    ]
   }
